--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
                         <div class="card-header">
                             <h3 class="card-title">Premium Cigarettes</h3>
                         </div>
-                        <p class="card-text">Competitive pricing on <strong>Marlboro</strong>, <strong>Camel</strong>, <strong>Newport</strong>, <strong>American Spirit</strong>, <strong>Parliament</strong>, <strong>Kool</strong>, <strong>Pall Mall</strong>. As well as specialty varieties such as <strong>24/7</strong> <strong>Ace</strong>, <strong>Senca</strong>, <strong>Crown</strong>, and<strong>Global Classic</strong>. Stop by for the lowest priced cigarette in Indiana!</p>
+                        <p class="card-text">Competitive pricing on <strong>Marlboro</strong>, <strong>Camel</strong>, <strong>Newport</strong>, <strong>American Spirit</strong>, <strong>Parliament</strong>, <strong>Kool</strong>, <strong>Pall Mall</strong>. As well as specialty varieties such as <strong>24/7</strong> <strong>Ace</strong>, <strong>Senca</strong>, <strong>Crown</strong>, and <strong>Global Classic</strong>. Stop by for the lowest priced cigarette in Indiana!</p>
                     </div>
                     
                     <div class="card fade-in">
@@ -1090,7 +1090,7 @@
 
                     <div class="card fade-in">
                         <div class="card-header">
-                            <h3 class="card-title">Discount Tobacco</h3>
+                            <h3 class="card-title">Discount Tobacco<br>&nbsp;</h3>
                         </div>
                         <p class="card-text">Complete inventory of Discount loose tobacco, including <strong>Ohm Tobacco</strong>, <strong>The Good Stuff</strong>, <strong>Gambler Tobacco</strong>, <strong>Cherokee Tobacco</strong>, <strong>American Club</strong>, and other great miscellaneous options.</p>
                     </div>
@@ -1102,7 +1102,7 @@
                         <p class="card-text">We carry a wide selection of Pipes and Pipe tobacco, including various Premium <strong>Italian</strong>, <strong>Meerschaum</strong>, and <strong>Corn Cob</strong> pipes. As well as a wide selection of the best Pipe tobacco in the area including <strong>Stokkebye</strong>, <strong>Lane</strong>, and more!</p>
                     </div>
 
-                    <div class="card fade-in" style="border: 2px solid var(--red);">
+                    <div class="card fade-in">
                         <div class="card-header">
                             <h3 class="card-title"><i>Daily Cigar</i> - Exclusive</h3>
                         </div>
