complete seo / optimization

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Big Ash Cigar Lounge & Tobacco Stop Fort Wayne | Premium Cigars Indiana</title>
-    <meta name="description" content="Big Ash Cigar Lounge - Fort Wayne's premier tobacco shop & cigar lounge at 9111 Lima Rd. Premium cigars, tobacco products, climate-controlled humidor, 24/7 member lounge. Serving Fort Wayne, Huntertown, Allen County, Indiana.">
+    <title>Big Ash Cigar Lounge Fort Wayne | Premium Cigars Indiana</title>
+    <meta name="description" content="Fort Wayne's premier cigar lounge at 9111 Lima Rd. Premium cigars, tobacco products, 24/7 member access. Serving Fort Wayne, Huntertown, Allen County.">
     <meta name="keywords" content="cigar lounge Fort Wayne, tobacco shop Indiana, premium cigars Fort Wayne, cigar humidor Fort Wayne, smoking lounge Indiana, tobacco store Lima Road, Fort Wayne cigars, Indiana cigar shop, vape shop Fort Wayne">
     
     <!-- Local Business Meta -->
@@ -805,9 +805,11 @@
                 <a href="#" class="logo" aria-label="Big Ash Cigar Lounge & Tobacco Stop - Fort Wayne's Premier Cigar Destination">
                     <div class="logo-icon" aria-hidden="true">
                         <picture>
-                            <source type="image/avif" srcset="assets/img/big-ash-logo.avif">
-                            <source type="image/webp" srcset="assets/img/big-ash-logo.webp">
-                            <img src="assets/img/big-ash-logo.png" alt="Big Ash Logo" width="48" height="48" style="width: 100%; height: 100%; object-fit: contain;">
+                            <source type="image/avif" srcset="assets/img/big-ash-logo-96.avif" media="(max-width: 96px)">
+                            <source type="image/webp" srcset="assets/img/big-ash-logo-96.webp" media="(max-width: 96px)">
+                            <source type="image/avif" srcset="assets/img/big-ash-logo.avif" media="(min-width: 97px)">
+                            <source type="image/webp" srcset="assets/img/big-ash-logo.webp" media="(min-width: 97px)">
+                            <img src="assets/img/big-ash-logo-96.png" alt="Big Ash Logo" width="48" height="48" style="width: 100%; height: 100%; object-fit: contain;">
                         </picture>
                     </div>
                     <div class="logo-text">Big Ash Cigar Lounge & Tobacco Stop</div>
